# sentio

./: .dockerignore  .gitignore  Dockerfile  README.md  dummy_change_management.txt  heroku.yml  nx.json  package-lock.json  package.json
backend/: project.json  pyproject.toml
backend/app/: constants.py  database.py  main.py  models.py
backend/app/agents/: chat.py  dashboard.py  generator_chat.py  insights.py  knowledge.py  mcp_client.py  orchestrator.py  recommendations.py  survey.py  web_search.py
backend/app/factories/: __init__.py  base.py  project.py  recommendation.py  session.py  stakeholder.py
backend/app/generators/: __init__.py  rating_patterns.py  scenario_base.py
backend/app/generators/scenarios/: __init__.py  new_project.py  six_month.py  ten_month.py  three_month.py
backend/app/prompts/: __init__.py
backend/app/prompts/de/: chat.yaml  constants.yaml  dashboard.yaml  generator_chat.yaml  insights.yaml  orchestrator.yaml  recommendations.yaml  survey.yaml
backend/app/prompts/en/: chat.yaml  constants.yaml  dashboard.yaml  generator_chat.yaml  insights.yaml  orchestrator.yaml  recommendations.yaml  survey.yaml
backend/app/routers/: documents.py  insights.py  projects.py  recommendations.py  seed.py  sessions.py  stakeholders.py  surveys.py  workflow.py
backend/mcp_server/: __init__.py  server.py
backend/mcp_server/tools/: __init__.py  assessments.py  documents.py  insights.py  projects.py  recommendations.py  sessions.py  stakeholders.py  surveys.py  workflow.py
frontend/: index.html  package-lock.json  package.json  project.json  (+1 more)
(+75 files in other folders)
